# samarco

./: README.md  docker-compose-linux.yaml  docker-compose-windows.yaml  log docker .txt
SMRC_Project/src/: run.sh
SMRC_Project/src/automation_robot_description_pkg/: package.xml  setup.cfg  setup.py
SMRC_Project/src/automation_robot_description_pkg/rviz/: automation_robot_rviz.rviz  automation_robot_rviz.rviz)
SMRC_Project/src/automation_robot_description_pkg/urdf/: automation_robot_description.urdf  automation_robot_description.urdf.xacro  automation_robot_description_v1.urdf.xacro  automation_robot_description_v2.urdf.xacro  automation_robot_description_v3.urdf.xacro  automation_robot_description_v4.urdf.xacro  automation_robot_description_v5.urdf.xacro  automation_robot_description_v6.urdf.xacro  automation_robot_description_v7.urdf.xacro  automation_robot_description_v8.urdf.xacro
SMRC_Project/src/automation_robot_launch_pkg/: package.xml  setup.cfg  setup.py
SMRC_Project/src/automation_robot_launch_pkg/launch/: automation_robot_launch.launch.py  automation_robot_launch_v1.launch.py  automation_robot_launch_v2.launch.py
SMRC_Project/src/automation_robot_teleop_pkg/: package.xml  setup.cfg  setup.py
SMRC_Project/src/automation_robot_teleop_pkg/automation_robot_teleop_pkg/: keyboard_teleop.py
SMRC_Project/src/automation_robot_teleop_pkg/launch/: automation_teleop_launch.launch.xml  keyboard_teleop_launch.py  keyboard_teleop_launch_v1.py
SMRC_Project/src/automation_world/: CMakeLists.txt  package.xml
SMRC_Project/src/automation_world/meshes/: CAD_porao.dae  CAD_porao.stl  CAD_porao_v1.dae  Parte_1.dae  Parte_2.dae
SMRC_Project/src/automation_world/worlds/: porao.config  porao.sdf  porao_v1.sdf
SMRC_Project/src/autonomous_robot_pkg/: package.xml  setup.cfg  setup.py
SMRC_Project/src/autonomous_robot_pkg/autonomous_robot_pkg/: robot_controller.py
SMRC_Project/src/magnetic_adhesion_plugin/: CMakeLists.txt  package.xml
SMRC_Project/src/magnetic_adhesion_plugin/config/: magnetic_adhesion_plugin.yaml
SMRC_Project/src/magnetic_adhesion_plugin/include/magnetic_adhesion_plugin/: MagneticAdhesionPlugin.hh  visibility_control.h
SMRC_Project/src/magnetic_adhesion_plugin/src/: MagneticAdhesionPlugin.cpp  MagneticAdhesionPlugin_v1.cpp
SMRC_Project/src/robot_inclination_pkg/: package.xml  setup.cfg  setup.py
SMRC_Project/src/robot_inclination_pkg/robot_inclination_pkg/: robot_inclination.py
docker/: Dockerfile  DockerfileTeleop  entrypoint-teleop.sh  entrypoint.sh
