<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>magnetic_adhesion_plugin</name>
  <version>0.0.0</version>
  <description>A magnetic adhesion plugin for ROS 2 and Gazebo Ignition</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>  <!-- Add std_msgs dependency -->
  <depend>ignition-gazebo6</depend>
  <depend>ignition-cmake2</depend>
  <depend>ignition-plugin1</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
